B-F Backup Sandbox 30.4.12/src/objects/Requirement__c.object
<CustomObject>
    <description>A Requirement represents a business or technical need specific to the project. Requirements are associated to Work Packages and are the most granular level of functionality.</description>
    <fields>
        <fullName>Additional_Comments__c</fullName>
        <inlineHelpText>Add any additional comments here. Track each comment with your initial and date e.g. AK 3/29/11</inlineHelpText>
        <label>Additional Comments</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Application_Work_Package_Name__c</fullName>
        <formula>Application_Work_Package_No__r.Work_Package_Name__c</formula>
        <label>Application Work Package Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Application_Work_Package_No__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Application Work Package #</label>
        <referenceTo>Work_Package__c</referenceTo>
        <relationshipLabel>Requirements</relationshipLabel>
        <relationshipName>Requirements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Business_Approver__c</fullName>
        <label>Business Approver</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Change_Set__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Change Set</label>
        <referenceTo>Change_Set__c</referenceTo>
        <relationshipLabel>New Requirements</relationshipLabel>
        <relationshipName>Requirements1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Demo__c</fullName>
        <label>Demo (Y/N)?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Designated_Demo_Session__c</fullName>
        <label>Designated Demo Session</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_Managed_Development__c</fullName>
        <description>Development that is related to and managd outside of the Force.com platform but may fall within the scope of the release</description>
        <inlineHelpText>Development that is related to and managd outside of the Force.com platform but may fall within the scope of the release</inlineHelpText>
        <label>External Managed Development</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gap_Analysis__c</fullName>
        <inlineHelpText>Gap Description (if Gap= &apos;Y&quot;)</inlineHelpText>
        <label>Gap Analysis</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Gap__c</fullName>
        <label>Gap</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Key_Assumptions__c</fullName>
        <label>Key Assumptions</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Objects__c</fullName>
        <label>Object(s)</label>
        <picklist>
            <picklistValues>
                <fullName>Accounts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brands</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contacts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Internal Orders</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Market</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Opportunities</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Products</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Promotion Material Items</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Promotions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tasks/ Events</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <label>Priority</label>
        <picklist>
            <picklistValues>
                <fullName>Critical</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Proposed_Approach__c</fullName>
        <label>Proposed Approach</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Requirement_Description__c</fullName>
        <label>Requirement Description</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Scope__c</fullName>
        <description>Is the requirement in-scope or out-of-scope?</description>
        <label>Scope</label>
        <picklist>
            <picklistValues>
                <fullName>In Scope</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Out of Scope</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Solution_Type__c</fullName>
        <label>Solution Type</label>
        <picklist>
            <picklistValues>
                <fullName>Assignment Rules</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Batch Upload</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Custom Object</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Configuration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Configuration + Custom Code</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Custom Code</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Custom Link</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Data</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>External Leads Message Entry (Sites)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Integration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mashup</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Need More Information</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Regulatory/Legal/Regional/ Globalization</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reporting / Documentation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Security (Profile/Roles/Layouts)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Standard Object</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>System</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Territory Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Training</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Validation Rules</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Web Tab</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Workflow / Business Process Flow</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Source__c</fullName>
        <label>Source</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>New</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Pending Review</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending Prioritization</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lockdown</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Future</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Duplicate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Requirement</label>
    <listViews>
        <fullName>AllRequirements</fullName>
        <columns>Application_Work_Package_No__c</columns>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>Priority__c</columns>
        <columns>Application_Work_Package_Name__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Requirements</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>In_Scope_Requirements</fullName>
        <columns>NAME</columns>
        <columns>Requirement_Description__c</columns>
        <columns>Source__c</columns>
        <columns>Category__c</columns>
        <columns>Status__c</columns>
        <columns>Priority__c</columns>
        <columns>Application_Work_Package_No__c</columns>
        <columns>Application_Work_Package_Name__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Scope__c</field>
            <operation>equals</operation>
            <value>In Scope</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>New,Pending Review,Pending Prioritization,Lockdown</value>
        </filters>
        <label>In-Scope Requirements</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Out_of_Scope_Requirements</fullName>
        <columns>NAME</columns>
        <columns>Requirement_Description__c</columns>
        <columns>Status__c</columns>
        <columns>Category__c</columns>
        <columns>Source__c</columns>
        <columns>Priority__c</columns>
        <columns>Application_Work_Package_No__c</columns>
        <columns>Application_Work_Package_Name__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Scope__c</field>
            <operation>equals</operation>
            <value>Out of Scope</value>
        </filters>
        <label>Out-of-Scope Requirements</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>REQ - {00000}</displayFormat>
        <label>Requirement ID</label>
        <type>AutoNumber</type>
    </nameField>
    <namedFilters>
        <fullName>nf_01IQ00000008wmwMAA_00NQ0000000cFKHMA2</fullName>
        <active>true</active>
        <field>Test_Case__c.Related_Requirement__c</field>
        <filterItems>
            <field>Requirement__c.Status__c</field>
            <operation>notEqual</operation>
            <value>Duplicate, Rejected, Out of Scope</value>
        </filterItems>
        <isOptional>false</isOptional>
        <name>Test Case_Related Requirement</name>
    </namedFilters>
    <pluralLabel>Requirements</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>